# ver.txt

./: CMakeLists.txt  README.md
3rdparts/glimac/: CMakeLists.txt
3rdparts/glimac/include/glimac/: Image.hpp  Light.hpp  PointLight.hpp  SDLAppleWindowManager.hpp  glm.hpp
3rdparts/glimac/src/: Image.cpp  Light.cpp  PointLight.cpp  SDLAppleWindowManager.cpp  SDLWindowManager.cpp
assets/config/: ver.1.txt  ver.2.txt  ver.3.txt  ver.example.txt
shaders/: default.fs.glsl  default.vs.glsl  ver.1.fs.glsl  ver.2.fs.glsl  ver.3.fs.glsl  ver.3.vs.glsl
src/: Camera.hpp  Column.cpp  Column.hpp  FreeFlyCamera.cpp  FreeFlyCamera.hpp  InputManager.cpp  InputManager.hpp  Letter.cpp  Letter.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Object3D.cpp  Object3D.hpp  Organic.cpp  Organic.hpp  PerlinNoise.cpp  Quad.cpp  Quad.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SkyBox.cpp  SkyBox.hpp  Sphere.cpp  Sphere.hpp  Terrain.cpp  Terrain.hpp  Tesseract.cpp  Tesseract.hpp  Texture.cpp  Texture.hpp  TrackballCamera.cpp  TrackballCamera.hpp  main.cpp  tools.cpp  tools.hpp
